# aesthetics-visor

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
bak_visor/: app.py  constants.py  models.py  utils.py
database/: metadata.json
mcp-server/: Dockerfile  server.py
visor/: Dockerfile  admin.py  apps.py  mcp_client.py  urls.py
visor/forms/: metadata_forms.py
visor/management/commands/: update_filenames.py
visor/migrations/: 0001_initial.py
visor/models/: metadata.py  tag.py
visor/templates/: _gallery_inner.html  _metadata_form.html  bak_metadata_form.html  base.html  gallery.html
visor/views/: metadata_views.py
visor_settings/: asgi.py  settings.py  urls.py  wsgi.py
