[project]
name = "aesthetics-visor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crispy-bootstrap5>=2025.6",
    "django~=5.0",
    "django-bootstrap5>=25.2",
    "django-crispy-forms>=2.4",
    "django-select2>=8.4.1",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
]
